<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="279dp"
            android:layout_height="46dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="84dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/fechaNacimiento"/>
    <Button
            android:text="@string/calculaEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10pt"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnCalcular" android:background="@color/colorAccent" tools:text="@string/calculaEdad"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <Button
            android:text="@string/nuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnAlert" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcular" app:layout_constraintHorizontal_bias="0.498"
            android:background="@android:color/holo_red_dark"/>
    <Button
            android:text="@string/progressDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnProgress" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnAlert"/>
    <Button
            android:text="@string/listAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDialog"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="@+id/btnProgress" app:layout_constraintEnd_toStartOf="@+id/btnAlertSimple"
            android:layout_marginEnd="64dp" android:layout_marginRight="64dp"/>
    <Button
            android:text="@string/alertAnko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAlertSimple"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="@+id/btnProgress" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="72dp" android:layout_marginRight="72dp"/>
</android.support.constraint.ConstraintLayout>